--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vocabflow---english-reader",
+  "name": "philingo-english-reader",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.32.0",
+    "@vercel/analytics": "^1.4.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
