--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.32.0",
     "@vercel/analytics": "^1.4.1",
     "lucide-react": "^0.556.0",
+    "openai": "^6.13.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
